--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   persistent_bottom_nav_bar: ^6.2.1
+  animations: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/image/pic0.jpg
+   - assets/image/pic1.jpg
+   - assets/image/pic2.jpg
+   - assets/image/pic3.jpg
+   - assets/image/pic4.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
